many many many many + 8

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,49 +1,43 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>22 дек:  <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм, различной зернистости"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>22 дек:  <DD><a href="/catalog/cat596.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стрейч &mdash; Паллетная плёнка полимерная,&#xa;ролик весом 1.8 кг, ширина 500 мм, толщина 17 мкм"><span class="title">Паллетная плёнка</span><span class="dop"> Стрейч</span></a><br>
+  <DT>20 дек:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены:&#xa;Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>07 дек:  <DD><a href="/catalog/cat416.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла по металлу ПРОФИ&#xa;из быстрорежущей стали HSS-G P6M5&#xa;'РОСОМАХА', 1 .. 13 мм"><span class="title">Свёрла по металлу</span><span class="dop"> ПРОФИ</span></a><br>
+  <DT>06 дек:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Диски алмазные"><span class="title">Диски алмазные</span><span class="dop"></span></a><br>
+  <DT>05 дек:  <DD><a href="/catalog/cat172.shtml" title="Цены снижены: Коронки по бетону 'РОСОМАХА'&#xa;в сборе, с хвостовиком SDS+&#xa;ударные / алмазные"><span class="title">Коронки по бетону</span><span class="dop"></span></a><br>
+  <DT>05 дек:  <DD><a href="/catalog/cat89.shtml"  title="Снова в продаже:&#xa;Краги сварщика спилковые `ТРЕК` красные&#xa;на подкладке УТЕПЛЕННЫЕ"><span class="title">Краги сварщика</span><span class="dop"> утепленные</span></a><br>
+  <DT>23 ноя:  <DD><a href="/catalog/cat87.shtml"  title="Цены снижены:&#xa;Перчатки с нитриловым покрытием,&#xa;полный облив, на краге и на манжете"><span class="title">Перчатки с нитриловым покр.</span><span class="dop"></span></a><br>
+  <DT>22 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;СОУДАЛ желтая ЗИМНЯЯ, 750 мл"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
+  <DT>17 ноя:  <DD><a href="/catalog/cat208.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Мешок для строительного мусора&#xa;полипропиленовый зеленый, 55 x 95 см"><span class="title">Мешок для мусора</span><span class="dop"></span></a><br>
+  <DT>10 ноя:  <DD><a href="/catalog/cat24.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены на многие позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
+  <DT>10 ноя:  <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
   <DT>31 окт : <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Полиуретановый клей-пена пистолетная&#xa;Soudabond EasyGun 750 мл всесезонная"><span class="title">Монтажный клей-пена</span><span class="dop"> EasyGun</span></a><br>
   <DT>28 окт : <DD><a href="/catalog/cat86.shtml"  title="Расширен ассортимент:&#xa;Перчатки Х/Б с ПВХ покрытием&#xa;4-х нитка 7.5 класс &laquo;Протектор&raquo;"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
-  <DT>09 авг : <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
-  <DT>09 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
-  <DT>05 авг : <DD><a href="/catalog/cat302.shtml" title="Снова в продаже: Бучарда SDS Max 40 х 40 х 250 мм, 16 зубьев"><span class="title">Бучарда</span><span class="dop"> SDS Max</span></a><br>
-  <DT>01 авг : <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>26 июл:  <DD><a href="/catalog/cat184.shtml" title="Снова в продаже: Круги отрезные по металлу BERGEN"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
-  <DT>04 июл:  <DD><a href="/catalog/cat105.shtml" title="Снова в продаже: Тачки строительные одно- и двухколёсные"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
-  <DT>02 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены снижены: Шпильки резьбовые оцинкованные, DIN 975&#xa;Длина 1 и 2 метра, разные диаметры"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
-  <DT>29 июн:  <DD><a href="/catalog/cat191.shtml" title="Обновлен ассортимент:&#xa;Пистолеты для монтажной пены 'РемоКолор'"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
-  <DT>28 июн:  <DD><a href="/catalog/cat144.shtml" title="Обновлен ассортимент:&#xa;Валики и мини-ролики малярные 'Велюр'&#xa;на рукоятке 6 мм и сменные"><span class="title">Валики малярные</span><span class="dop"> "Велюр"</span></a><br>
-  <DT>28 июн:  <DD><a href="/catalog/cat212.shtml" title="Новый товар:&#xa;Мерные ленты геодезические&#xa;длиной 30 и 50 м, в открытом пластиковом корпусе"><span class="title">Мерные ленты</span><span class="dop"> геодезические</span></a><br>
-  <DT>27 июн:  <DD><a href="/catalog/cat256.shtml" title="Обновлен ассортимент:&#xa;Отвертки POINT, CrV, крестовые и плоские"><span class="title">Отвертки</span><span class="dop"> POINT, CrV</span></a><br>
-  <DT>27 июн:  <DD><a href="/catalog/cat163.shtml" title="Новый товар:&#xa;Носилки строительные в сборе, 100 кг, 80 л"><span class="title">Носилки строительные</span><span class="dop"></span></a><br>
-  <DT>27 июн:  <DD><a href="/catalog/cat183.shtml" title="Обновлен ассортимент:&#xa;Щётки крацовки для УШМ, торцевые и плоские радиальные"><span class="title">Щётки для УШМ</span><span class="dop"> (крацовки)</span></a><br>
-  <DT>20 июн:  <DD><a href="/catalog/cat416.shtml" title="Новый ассортимент:&#xa;Свёрла по металлу ПРОФИ из быстрорежущей стали HSS-G P6M5&#xa;'РОСОМАХА', 1 .. 13 мм"><span class="title">Свёрла по металлу</span><span class="dop"> ПРОФИ</span></a><br>
-  <DT>18 июн:  <DD><a href="/catalog/cat189.shtml" title="Новый товар:&#xa;Чашка алмазная шлифовальная ТУРБО 125 мм&#xa;'РОСОМАХА'"><span class="title">Чашка шлифовальная</span><span class="dop"> ТУРБО</span></a><br>
-  <DT>15 июн:  <DD><a href="/catalog/cat295.shtml" title="Новый ассортимент:&#xa;Эмаль акриловая аэрозольная&#xa;'РемоКолор Professional', 520 мл - различные цвета"><span class="title">Аэрозольные краски</span></a><br>
-  <DT>14 июн:  <DD><a href="/catalog/cat175.shtml" title="Новый ассортимент:&#xa;Пена монтажная 'SOUDAL'&#xa;ручная/пистолетная/огнестойкая"><span class="title">Монтажная пена</span></a>, <a href="/catalog/cat176.shtml" title="Новый ассортимент:&#xa;Силикон строительный универсальный белый/прозрачный&#xa;'Profil', 280 мл"><span class="title">герметики</span></a><br>
-  <DT>14 июн:  <DD><a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Саморезы по дереву, гипсокартону и тонкому металлу оксидированные"><span class="title">Саморезы</span><span class="dop"> по дереву</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/abraz/big/Krug%20Luga.jpg" title="Большое фото: Круги отрезные по металлу (Луга)">
+        href="/img/pic/abraz/big/Krug%20Luga.jpg" title="Большое фото: Отрезные диски по металлу (Луга)">
         <img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat24.shtml"
-        title="Круги отрезные по металлу (пр-во г. Луга) на нашем сайте">
+        title="Отрезные диски по металлу (пр-во г. Луга) на нашем сайте">
         <p>
-          <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода),</span>
+          <span class="title">Отрезные диски по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода),</span>
           <span class="addt"><br>разные размеры</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/foam/big/SPTG65w.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл">
-        <img src="/img/pic/foam/small/SPTG65ww.png" width="98"></a></td>
+        href="/img/pic/foam/big/113986.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;"Yellow"     SOUDAL, 750 мл">
+        <img src="/img/pic/foam/small/113986.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat175.shtml"
-        title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл&#xa;на нашем сайте">
+        title="Пена монтажная пистолетная профессиональная&#xa;`Yellow` SOUDAL, 750 мл &#xa;на нашем сайте">
         <p>
-          <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 65 Winter,</span>
-          <span class="addt"> 875 мл</span>
+          <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>"Yellow" SOUDAL,</span>
+          <br><span class="addt">безопасная для тонких профилей из ПВХ,<br>750 мл,<br>летняя и зимняя</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
@@ -54,5 +48,28 @@
         title="Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез&#xa;на нашем сайте">
         <p>
           <span class="title">Диски алмазные</span><span class="dop"><br>РОСОМАХА</span>
+          <br><span class="addt">сегментные,<br>ТУРБО<br>и супертонкие<br>(по керамике)</span>
+        </p></a></td></table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/krep/big/Gvozdi stroitelnye.jpg" title="Большое фото: Гвозди строительные">
+        <img src="/img/pic/krep/small/Gvozdi stroitelnye.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat14.shtml"
+        title="Гвозди строительные на нашем сайте">
+        <p>
+          <span class="title">Гвозди строительные</span><span class="dop"><br>ГОСТ 4028-80</span>
+          <br><span class="addt">В упаковках от 5 до 25 кг</span>
+        </p></a></td></table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/abraz/big/Zachistnoj krug Luga.jpg" title="Большое фото:&#xa;Круг зачистной обдирочный&#xa;125 х 6.0 х 22.2">
+        <img src="/img/pic/abraz/small/Zachistnoj krug Luga.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat26.shtml"
+        title="Круги зачистные обдирочные (пр-во г. Луга)&#xa;на нашем сайте">
+        <p>
+          <span class="title">Круги зачистные обдирочные</span><span class="dop"><br>(пр-во Лужского Абразивного Завода),</span>
+          <span class="addt"><br>разные размеры</span>
         </p></a></td></table>
 </div>
