--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,24 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <!-- ^ 2022 ^ -->
+  <DT>09 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>09 авг : <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
+  <DT>05 авг : <DD><a href="/catalog/cat302.shtml" title="Снова в продаже: Бучарда SDS Max 40 х 40 х 250 мм, 16 зубьев"><span class="title">Бучарда</span><span class="dop"> SDS Max</span></a><br>
+  <DT>01 авг : <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>26 июл:  <DD><a href="/catalog/cat184.shtml" title="Снова в продаже: Круги отрезные по металлу BERGEN"><span class="title">Круги отрезные</span><span class="dop"> BERGEN</span></a><br>
+  <DT>04 июл:  <DD><a href="/catalog/cat105.shtml" title="Снова в продаже: Тачки строительные одно- и двухколёсные"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
+  <DT>02 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены снижены: Шпильки резьбовые оцинкованные, DIN 975&#xa;Длина 1 и 2 метра, разные диаметры"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
+  <DT>29 июн:  <DD><a href="/catalog/cat191.shtml" title="Обновлен ассортимент:&#xa;Пистолеты для монтажной пены 'РемоКолор'"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
+  <DT>28 июн:  <DD><a href="/catalog/cat144.shtml" title="Обновлен ассортимент:&#xa;Валики и мини-ролики малярные 'Велюр'&#xa;на рукоятке 6 мм и сменные"><span class="title">Валики малярные</span><span class="dop"> "Велюр"</span></a><br>
+  <DT>28 июн:  <DD><a href="/catalog/cat212.shtml" title="Новый товар:&#xa;Мерные ленты геодезические&#xa;длиной 30 и 50 м, в открытом пластиковом корпусе"><span class="title">Мерные ленты</span><span class="dop"> геодезические</span></a><br>
+  <DT>27 июн:  <DD><a href="/catalog/cat256.shtml" title="Обновлен ассортимент:&#xa;Отвертки POINT, CrV, крестовые и плоские"><span class="title">Отвертки</span><span class="dop"> POINT, CrV</span></a><br>
+  <DT>27 июн:  <DD><a href="/catalog/cat163.shtml" title="Новый товар:&#xa;Носилки строительные в сборе, 100 кг, 80 л"><span class="title">Носилки строительные</span><span class="dop"></span></a><br>
+  <DT>27 июн:  <DD><a href="/catalog/cat183.shtml" title="Обновлен ассортимент:&#xa;Щётки крацовки для УШМ, торцевые и плоские радиальные"><span class="title">Щётки для УШМ</span><span class="dop"> (крацовки)</span></a><br>
+  <DT>20 июн:  <DD><a href="/catalog/cat416.shtml" title="Новый ассортимент:&#xa;Свёрла по металлу ПРОФИ из быстрорежущей стали HSS-G P6M5&#xa;'РОСОМАХА', 1 .. 13 мм"><span class="title">Свёрла по металлу</span><span class="dop"> ПРОФИ</span></a><br>
+  <DT>18 июн:  <DD><a href="/catalog/cat189.shtml" title="Новый товар:&#xa;Чашка алмазная шлифовальная ТУРБО 125 мм&#xa;'РОСОМАХА'"><span class="title">Чашка шлифовальная</span><span class="dop"> ТУРБО</span></a><br>
+  <DT>15 июн:  <DD><a href="/catalog/cat295.shtml" title="Новый ассортимент:&#xa;Эмаль акриловая аэрозольная&#xa;'РемоКолор Professional', 520 мл - различные цвета"><span class="title">Аэрозольные краски</span></a><br>
+  <DT>14 июн:  <DD><a href="/catalog/cat175.shtml" title="Новый ассортимент:&#xa;Пена монтажная 'SOUDAL'&#xa;ручная/пистолетная/огнестойкая"><span class="title">Монтажная пена</span></a>, <a href="/catalog/cat176.shtml" title="Новый ассортимент:&#xa;Силикон строительный универсальный белый/прозрачный&#xa;'Profil', 280 мл"><span class="title">герметики</span></a><br>
+  <DT>14 июн:  <DD><a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Саморезы по дереву, гипсокартону и тонкому металлу оксидированные"><span class="title">Саморезы</span><span class="dop"> по дереву</span></a><br>
   <DT>15 апр:  <DD><a href="/catalog/cat535.shtml" title="Новые товары:&#xa;Кисти плоские флейцевые КФ,&#xa;искусственное расщепленное волокно Канекарон,&#xa;1 - 4 &Prime;"><span class="title">Кисти плоские КФ</span><span class="dop"> Канекарон</span></a><br>
   <DT>14 апр:  <DD><a href="/catalog/cat49.shtml"  title="Новые товары:&#xa;Зубила плоские для перфораторов SDS Max, SDS Plus RennBohr Basic"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Новые товары:&#xa;Пики для перфораторов SDS Max, SDS Plus RennBohr Basic"><span class="title">пики</span></a><span class="dop"> SDS Max, SDS+</span><br>
   <DT>11 апр:  <DD><a href="/catalog/cat47.shtml"  title="Новые товары:&#xa;Буры по бетону для перфоратора SDS plus RennBohr Duo"><span class="title">Буры SDS+</span><span class="dop"> RennBohr Duo</span></a><br>
@@ -973,4 +991,15 @@
       <p>
         <span class="title">Алмазные коронки по керамограниту<br>и керамике</span><span class="dop"> HAGWERT</span>
         <span class="addt"><br>в сборе с центрирующим сверлом</span>
+      </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/foam/big/SPTG65w.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл">
+      <img src="/img/pic/foam/small/SPTG65w.png" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat175.shtml"
+      title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл&#xa;на нашем сайте">
+      <p>
+        <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 65 Winter,</span>
+        <span class="addt"> 875 мл</span>
       </p></a></td></table>
