many many + ankers

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Новые товары:&#xa;свёрла по стеклу, керамике и керамограниту,&#xa;2 и 4 режущие грани, &empty; 3 - 16 мм"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
+  <DT>28 фев:  <DD><a href="/catalog/cat299.shtml" title="Новые товары:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике,&#xa;&empty; 20 - 100 мм"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
+  <DT>27 фев:  <DD><a href="/catalog/cat78.shtml"  title="Новые товары:&#xa;Свёрла по дереву пероввые,&#xa;длина 155 мм, &empty; 12 - 30 мм"><span class="title">Свёрла по дереву пероввые</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм, различной зернистости"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat596.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стрейч &mdash; Паллетная плёнка полимерная,&#xa;ролик весом 1.8 кг, ширина 500 мм, толщина 17 мкм"><span class="title">Паллетная плёнка</span><span class="dop"> Стрейч</span></a><br>
   <DT>20 дек:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены:&#xa;Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
@@ -12,8 +15,6 @@
   <DT>17 ноя:  <DD><a href="/catalog/cat208.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Мешок для строительного мусора&#xa;полипропиленовый зеленый, 55 x 95 см"><span class="title">Мешок для мусора</span><span class="dop"></span></a><br>
   <DT>10 ноя:  <DD><a href="/catalog/cat24.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены на многие позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
   <DT>10 ноя:  <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
-  <DT>31 окт : <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Полиуретановый клей-пена пистолетная&#xa;Soudabond EasyGun 750 мл всесезонная"><span class="title">Монтажный клей-пена</span><span class="dop"> EasyGun</span></a><br>
-  <DT>28 окт : <DD><a href="/catalog/cat86.shtml"  title="Расширен ассортимент:&#xa;Перчатки Х/Б с ПВХ покрытием&#xa;4-х нитка 7.5 класс &laquo;Протектор&raquo;"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
