--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <!-- ^ 2022 ^ -->
+  <DT>31 окт : <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Полиуретановый клей-пена пистолетная&#xa;Soudabond EasyGun 750 мл всесезонная"><span class="title">Монтажный клей-пена</span><span class="dop"> EasyGun</span></a><br>
+  <DT>28 окт : <DD><a href="/catalog/cat86.shtml"  title="Расширен ассортимент:&#xa;Перчатки Х/Б с ПВХ покрытием&#xa;4-х нитка 7.5 класс &laquo;Протектор&raquo;"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
   <DT>09 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
   <DT>09 авг : <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
   <DT>05 авг : <DD><a href="/catalog/cat302.shtml" title="Снова в продаже: Бучарда SDS Max 40 х 40 х 250 мм, 16 зубьев"><span class="title">Бучарда</span><span class="dop"> SDS Max</span></a><br>
