many many many many many many

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,28 +1,27 @@
-<div id=n>
+  <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Новые товары:&#xa;свёрла по стеклу, керамике и керамограниту,&#xa;2 и 4 режущие грани, &empty; 3 - 16 мм"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
-  <DT>28 фев:  <DD><a href="/catalog/cat299.shtml" title="Новые товары:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике,&#xa;&empty; 20 - 100 мм"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
-  <DT>27 фев:  <DD><a href="/catalog/cat78.shtml"  title="Новые товары:&#xa;Свёрла по дереву пероввые,&#xa;длина 155 мм, &empty; 12 - 30 мм"><span class="title">Свёрла по дереву пероввые</span></a><br>
-  <DT>22 дек:  <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм, различной зернистости"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
-  <DT>22 дек:  <DD><a href="/catalog/cat596.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стрейч &mdash; Паллетная плёнка полимерная,&#xa;ролик весом 1.8 кг, ширина 500 мм, толщина 17 мкм"><span class="title">Паллетная плёнка</span><span class="dop"> Стрейч</span></a><br>
-  <DT>20 дек:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены:&#xa;Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>07 дек:  <DD><a href="/catalog/cat416.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла по металлу ПРОФИ&#xa;из быстрорежущей стали HSS-G P6M5&#xa;'РОСОМАХА', 1 .. 13 мм"><span class="title">Свёрла по металлу</span><span class="dop"> ПРОФИ</span></a><br>
-  <DT>06 дек:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Диски алмазные"><span class="title">Диски алмазные</span><span class="dop"></span></a><br>
-  <DT>05 дек:  <DD><a href="/catalog/cat172.shtml" title="Цены снижены: Коронки по бетону 'РОСОМАХА'&#xa;в сборе, с хвостовиком SDS+&#xa;ударные / алмазные"><span class="title">Коронки по бетону</span><span class="dop"></span></a><br>
-  <DT>05 дек:  <DD><a href="/catalog/cat89.shtml"  title="Снова в продаже:&#xa;Краги сварщика спилковые `ТРЕК` красные&#xa;на подкладке УТЕПЛЕННЫЕ"><span class="title">Краги сварщика</span><span class="dop"> утепленные</span></a><br>
-  <DT>23 ноя:  <DD><a href="/catalog/cat87.shtml"  title="Цены снижены:&#xa;Перчатки с нитриловым покрытием,&#xa;полный облив, на краге и на манжете"><span class="title">Перчатки с нитриловым покр.</span><span class="dop"></span></a><br>
-  <DT>22 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;СОУДАЛ желтая ЗИМНЯЯ, 750 мл"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
-  <DT>17 ноя:  <DD><a href="/catalog/cat208.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Мешок для строительного мусора&#xa;полипропиленовый зеленый, 55 x 95 см"><span class="title">Мешок для мусора</span><span class="dop"></span></a><br>
-  <DT>10 ноя:  <DD><a href="/catalog/cat24.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены на многие позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
-  <DT>10 ноя:  <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
+  <DT>31 июл:  <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика КОРУНД-1,&#xa;фильтр АСФ 4/9-13 &laquo;Хамелеон&raquo;"><span class="title">Маска сварщика</span><span class="dop"> Хамелеон</span></a><br>
+  <DT>24 июл:  <DD><a href="/catalog/cat256.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент:&#xa;Отвертки POINT, CrV,&#xa;крестовые и плоские"><span class="title">Отвертки</span><span class="dop"> POINT, CrV</span></a><br>
+  <DT>21 июл:  <DD><a href="/catalog/cat45.shtml"  title="Новые товары:&#xa;Электроды сварочные пр-ва СЗСМ:&#xa;МР-3С, ОЗС-12, УОНИ 13/55&#xa;&empty; 3 и 4 мм"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
+  <DT>17 июл:  <DD><a href="/catalog/cat176.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Силикон строительный универсальный `Profil`, 280 мл;&#xa;Цвета: белый, прозрачный"><span class="title">Силикон универс.</span><span class="dop"> Profil, 280 мл</span></a><br>
+  <DT>12 июл:  <DD><a href="/catalog/cat545.shtml" title="Новые товары:&#xa;Круги абразивные самозакрепляющиеся&#xa;на липучке (`самолипы`) перфорированные, 8 отверстий"><span class="title">Круги абразивные на липучке</span></a><br>
+  <DT>11 июл:  <DD><a href="/catalog/cat422.shtml" title="Новые товары:&#xa;Свёрла по дереву спиральные (винтовые),&#xa;сталь HCS, 6-гранный хвостовик"><span class="title">Свёрла по дереву спиральные</span></a><br>
+  <DT>03 июл:  <DD><a href="/catalog/cat148.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для лакокрасочных материалов на водной основе&#xa;Искусственное расщепленное волокно &laquo;Канекарон&raquo;&#xa;Пластиковая рукоятка"><span class="title">Кисти</span></a> <a href="/catalog/cat569.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для всех типов лаков и красок,&#xa;натуральная светлая щетина, деревянная рукоятка"><span class="title">плоские</span></a><span class="dop"> флейцевые КФ</span><br>
+  <DT>28 июн:  <DD><a href="/catalog/cat158.shtml" title="Новые товары:&#xa;Плащи нейлоновые, прошитые швы, размер XL&#xa;Цвета: синий, желтый, зеленый"><span class="title">Плащи нейлоновые</span><span class="dop"></span></a><br>
+  <DT>13 июн:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
+  <DT>07 июн:  <DD><a href="/catalog/cat297.shtml" title="Новый товар:&#xa;Рукав кислородный ПРЕМИУМ,&#xa;  диаметр 9.0 мм, бухта 40 м"><span class="title">Рукав для газовой сварки</span><span class="dop"></span></a><br>
+  <DT>06 июн:  <DD><a href="/catalog/cat180.shtml" title="Новые товары: Газовые редукторы и горелки:&#xa; - Редуктор пропановый БПО-5-3;&#xa; - Горелка пропановая ГЗУ-3-23"><span class="title">Газовые редукторы и горелки</span><span class="dop"></span></a><br>
+  <DT>25 мая:  <DD><a href="/catalog/cat374.shtml" title="Новые товары:&#xa;Щетки тротуарные с металлическим держателем черенка&#xa;ширина 500, 600, 700 мм"><span class="title">Щетки тротуарные</span><span class="dop"></span></a><br>
+  <DT>15 мая:  <DD><a href="/catalog/cat29.shtml"  title="Новые товары:&#xa;Диски пильные по дереву для УШМ `РемоКолор professional`"><span class="title">Диски пильные по дереву</span><span class="dop">/УШМ</span></a><br>
+  <DT>07 апр:  <DD><a href="/catalog/cat109.shtml" title="Расширен ассортимент строительных промышленных маркеров:&#xa;Маркер перманентный и Маркер-краска &laquo;BRAUBERG&raquo;"><span class="title">Промышленные маркеры</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/abraz/big/Krug%20Luga.jpg" title="Большое фото: Отрезные диски по металлу (Луга)">
-        <img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"></a></td>
+        href="/img/pic/abraz/big/Otreznoj_krug_po_metallu_Luga2.jpg" title="Большое фото: Отрезные диски по металлу (Луга)">
+        <img src="/img/pic/abraz/small/Otreznoj_krug_po_metallu_Luga2.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat24.shtml"
         title="Отрезные диски по металлу (пр-во г. Луга) на нашем сайте">
         <p>
@@ -43,8 +42,8 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/abraz/big/101125.png" title="Большое фото:&#xa;Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез">
-        <img src="/img/pic/abraz/small/101125.png" width="98"></a></td>
+        href="/img/pic/abraz/big/almazny_disc_rosomaha.jpg" title="Большое фото:&#xa;Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез">
+        <img src="/img/pic/abraz/small/almazny_disc_rosomaha.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat28.shtml"
         title="Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез&#xa;на нашем сайте">
         <p>
@@ -55,7 +54,7 @@
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
         href="/img/pic/krep/big/Gvozdi stroitelnye.jpg" title="Большое фото: Гвозди строительные">
-        <img src="/img/pic/krep/small/Gvozdi stroitelnye.jpg" width="98"></a></td>
+        <img src="/img/pic/krep/small/Gvozdi stroitelnye2.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat14.shtml"
         title="Гвозди строительные на нашем сайте">
         <p>
@@ -65,8 +64,8 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/abraz/big/Zachistnoj krug Luga.jpg" title="Большое фото:&#xa;Круг зачистной обдирочный&#xa;125 х 6.0 х 22.2">
-        <img src="/img/pic/abraz/small/Zachistnoj krug Luga.jpg" width="98"></a></td>
+        href="/img/pic/abraz/big/krug_zachistnoy_luga_2.jpg" title="Большое фото:&#xa;Круг зачистной обдирочный&#xa;125 х 6.0 х 22.2">
+        <img src="/img/pic/abraz/small/krug_zachistnoy_luga_2.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat26.shtml"
         title="Круги зачистные обдирочные (пр-во г. Луга)&#xa;на нашем сайте">
         <p>
