--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,23 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <!-- ^ 2023 ^ -->
+  <DT>28 мар:  <DD><a href="/catalog/cat86.shtml"  title="Новые товары:&#xa;Перчатки Х/Б с двойным латексным покрытием ладони ПРОФИ ЛЮКС"><span class="title">Перчатки Х/Б</span><span class="dop"> двойной латекс</span></a><br>
+  <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Новые товары:&#xa;свёрла по стеклу, керамике и керамограниту,&#xa;2 и 4 режущие грани, &empty; 3 - 16 мм"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
+  <DT>28 фев:  <DD><a href="/catalog/cat299.shtml" title="Новые товары:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике,&#xa;&empty; 20 - 100 мм"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
+  <DT>27 фев:  <DD><a href="/catalog/cat78.shtml"  title="Новые товары:&#xa;Свёрла по дереву пероввые,&#xa;длина 155 мм, &empty; 12 - 30 мм"><span class="title">Свёрла по дереву пероввые</span></a><br>
   <!-- ^ 2022 ^ -->
+  <DT>22 дек:  <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм, различной зернистости"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>22 дек:  <DD><a href="/catalog/cat596.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стрейч &mdash; Паллетная плёнка полимерная,&#xa;ролик весом 1.8 кг, ширина 500 мм, толщина 17 мкм"><span class="title">Паллетная плёнка</span><span class="dop"> Стрейч</span></a><br>
+  <DT>20 дек:  <DD><a href="/catalog/cat14.shtml"  title="Цены снижены:&#xa;Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>07 дек:  <DD><a href="/catalog/cat416.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла по металлу ПРОФИ&#xa;из быстрорежущей стали HSS-G P6M5&#xa;'РОСОМАХА', 1 .. 13 мм"><span class="title">Свёрла по металлу</span><span class="dop"> ПРОФИ</span></a><br>
+  <DT>06 дек:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Диски алмазные"><span class="title">Диски алмазные</span><span class="dop"></span></a><br>
+  <DT>05 дек:  <DD><a href="/catalog/cat172.shtml" title="Цены снижены: Коронки по бетону 'РОСОМАХА'&#xa;в сборе, с хвостовиком SDS+&#xa;ударные / алмазные"><span class="title">Коронки по бетону</span><span class="dop"></span></a><br>
+  <DT>05 дек:  <DD><a href="/catalog/cat89.shtml"  title="Снова в продаже:&#xa;Краги сварщика спилковые `ТРЕК` красные&#xa;на подкладке УТЕПЛЕННЫЕ"><span class="title">Краги сварщика</span><span class="dop"> утепленные</span></a><br>
+  <DT>23 ноя:  <DD><a href="/catalog/cat87.shtml"  title="Цены снижены:&#xa;Перчатки с нитриловым покрытием,&#xa;полный облив, на краге и на манжете"><span class="title">Перчатки с нитриловым покр.</span><span class="dop"></span></a><br>
+  <DT>22 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;СОУДАЛ желтая ЗИМНЯЯ, 750 мл"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
+  <DT>17 ноя:  <DD><a href="/catalog/cat208.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Мешок для строительного мусора&#xa;полипропиленовый зеленый, 55 x 95 см"><span class="title">Мешок для мусора</span><span class="dop"></span></a><br>
+  <DT>10 ноя:  <DD><a href="/catalog/cat24.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены на многие позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные</span><span class="dop"> (Луга)</span></a><br>
+  <DT>10 ноя:  <DD><a href="/catalog/cat26.shtml"  title="Цены снижены:&#xa;Круги зачистные обдирочные&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги зачистные обдирочные</span><span class="dop"></span></a><br>
   <DT>31 окт : <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Полиуретановый клей-пена пистолетная&#xa;Soudabond EasyGun 750 мл всесезонная"><span class="title">Монтажный клей-пена</span><span class="dop"> EasyGun</span></a><br>
   <DT>28 окт : <DD><a href="/catalog/cat86.shtml"  title="Расширен ассортимент:&#xa;Перчатки Х/Б с ПВХ покрытием&#xa;4-х нитка 7.5 класс &laquo;Протектор&raquo;"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
   <DT>09 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
